fixin z-index hero

--- a/css/style.css
+++ b/css/style.css
@@ -105,7 +105,7 @@
     position: absolute;
     left: 7%;
     top: 10%;
-    z-index: 10;
+    z-index: 13;
 }
 .bottom-left{
     top: auto !important;
